@@ -211,7 +211,7 @@ current values of file descriptors 0, 1, and 2 in the parent process.
 
 There is no such concept as a weak binding any more.
 
-** Removed constants:  most-positive-fixnum, most-negative-fixnum, bignum-radix
+** Removed constants:  bignum-radix
 
 * Changes to the gh_ interface
 
